objects/Program_MTM__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs_MTM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Business_Line__c</fullName>
        <formula>TEXT(Program__r.Business_line__c)</formula>
        <label>Program Business Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <formula>Program__r.Name</formula>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Programs_MTM</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Program MTM</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ProgramMTM ID#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Programs MTM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>